#68 PlayerProfile PopuUps with stylesheet to prevent weird symbols

--- a/src/main/resources/views/playerProfileView.fxml
+++ b/src/main/resources/views/playerProfileView.fxml
@@ -212,7 +212,7 @@
                                         </ImageView>
                                         <Button fx:id="changeImageButton" alignment="CENTER_RIGHT" layoutX="113.0" layoutY="76.0" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#changeImage" prefHeight="22.0" prefWidth="74.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Change Image">
                                             <font>
-                                                <Font size="9.0" />
+                                                <Font name="Chalkboard" size="9.0" />
                                             </font>
                                         </Button>
                                     </children>
@@ -227,7 +227,7 @@
                                 </Button>
                                 <Button alignment="CENTER_RIGHT" contentDisplay="CENTER" minHeight="-Infinity" mnemonicParsing="false" onMouseClicked="#editProfile" prefHeight="22.0" prefWidth="34.0" styleClass="smallButton" stylesheets="@../stylesheets/buttonstyle.css" text="Edit" textAlignment="JUSTIFY" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                                     <font>
-                                        <Font size="10.0" />
+                                        <Font name="Chalkboard" size="10.0" />
                                     </font>
                                     <GridPane.margin>
                                         <Insets right="5.0" />
